# saavy_uptime

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Taskfile.yaml  d1c.toml  package.json  wrangler.toml
.factory/skills/: d1c.md
.github/workflows/: deploy.yml
apps/backend/: Cargo.toml  README.md  Taskfile.yaml  clippy.toml  d1c.toml
apps/backend/db/migrations/: 0001_init.sql  0002_org_owner.sql  0003_monitor_dispatches.sql  0004_monitor_status.sql  0005_monitor_dispatch.sql  0006_monitor_indexes.sql  0007_monitor_default_status.sql  0008_org_sample_rate.sql  0009_monitor_dispatch_hot.sql  0010_relay.sql  0011_monitor_relays.sql
apps/backend/db/queries/: bootstrap.sql  heartbeats.sql  monitor_dispatches.sql  monitors.sql  organizations.sql  relays.sql  schema.sql
apps/backend/migrations/: 0001_init.sql  0002_org_owner.sql  0003_monitor_dispatches.sql
apps/backend/src/: auth.rs  bootstrap.rs  cloudflare.rs  dispatch_state.rs  external.rs  heartbeats.rs  internal.rs  lib.rs  monitors.rs  observability.rs  organizations.rs  router.rs  telemetry.rs  utils.rs
apps/backend/src/analytics/: client.rs  extractor.rs  mod.rs  monitor_health.rs
apps/backend/src/auth/: current_user.rs  jwt.rs  membership.rs
apps/backend/src/bootstrap/: handlers.rs  ticker_bootstrap.rs  types.rs
apps/backend/src/cloudflare/: analytics.rs  d1.rs  durable_objects.rs  queues.rs  request.rs  ticker.rs
apps/backend/src/cloudflare/durable_objects/: location_hint.rs  relay.rs  ticker.rs  ticker_types.rs
apps/backend/src/cloudflare/queues/: heartbeat_summaries.rs  heartbeat_summary_types.rs
apps/backend/src/d1c/: queries.rs
apps/backend/src/d1c/queries/: bootstrap.rs  heartbeats.rs  monitor_dispatches.rs  monitors.rs  organizations.rs  relays.rs
apps/backend/src/db/: queries.rs  schema.sql
apps/backend/src/heartbeats/: handlers.rs  service.rs  types.rs
apps/backend/src/internal/: dispatch.rs  handlers.rs  types.rs
apps/backend/src/monitors/: handlers.rs  mod.rs  monitors.rs  service.rs  types.rs
apps/backend/src/observability/: analytics_layer.rs  console_layer.rs  mod.rs  visitor.rs
apps/backend/src/organizations/: handlers.rs  mod.rs  organizations.rs  types.rs
apps/backend/src/relays/: errors.rs  service.rs  types.rs
apps/backend/src/utils/: cors.rs  date.rs  errors.rs  mod.rs  wasm_types.rs
apps/frontend/: .cta.json  README.md  Taskfile.yaml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/frontend/src/: App.tsx  env.ts  main.tsx  styles.css
apps/frontend/src/components/: BootstrapGate.tsx  BootstrapWizard.tsx  Header.tsx  Layout.tsx  Sidebar.tsx  WorldMap.tsx
apps/frontend/src/components/form/: BooleanSwitchField.tsx  NumberField.tsx  SubmitButton.tsx  TextField.tsx  formContexts.ts  useAppForm.ts
apps/frontend/src/components/layout/: DescriptionList.tsx  Hero.tsx  SectionCard.tsx
apps/frontend/src/components/ui/: Skeleton.tsx  StatsCard.tsx  StatusPill.tsx  button.tsx  card.tsx  input.tsx  label.tsx  slider.tsx  switch.tsx  textarea.tsx
apps/frontend/src/lib/: api.ts  bootstrap.ts  cloudflare-colos.ts  monitors.ts  organizations.ts  relays.ts  ticker.ts
apps/frontend/src/routes/: dag.tsx  dashboard.tsx  incidents.tsx  monitor-new.tsx  monitors.tsx  status.tsx
apps/frontend/src/routes/monitors/: monitor-detail.tsx  monitor-edit.tsx  monitor-form.ts  monitor-new.tsx  monitors.tsx
apps/frontend/src/routes/organization/: organization.tsx
apps/frontend/src/routes/relays/: relays.tsx
crates/: hb-README.md
crates/d1c/: Cargo.toml  GETTING_STARTED.md  QUERY_FORMAT.md  README.md  Taskfile.yaml
crates/d1c/src/: cli.rs  commands.rs  main.rs
crates/d1c/src/commands/: dump_schema.rs  generate.rs  init.rs  watch.rs
crates/d1c/src/commands/generate/: analyzer.rs  parser.rs  renderer.rs  types.rs
crates/d1c/src/utils/: sql.rs
crates/hb-auth/: Cargo.toml  README.md  Taskfile.yaml
crates/hb-auth/src/: config.rs  extractor.rs  jwt.rs  lib.rs
crates/hb-d1c/: Cargo.toml  GETTING_STARTED.md  LICENSE  QUERY_FORMAT.md  README.md  Taskfile.yaml
crates/hb-d1c/src/: commands.rs  main.rs
crates/hb-d1c/src/commands/: generate.rs  init.rs  watch.rs
crates/hb-d1c/src/commands/generate/: parser.rs  renderer.rs  types.rs
crates/hb-tracing/: Cargo.toml  README.md
crates/hb-tracing/src/: console_layer.rs  layer.rs  lib.rs  processor.rs  span_event.rs  visitor.rs
db/queries/: test.sql
docs/: ae-functional-requirements.md  ae-handoff.md  analytics-engine-plan.md  analytics-engine.md  architecture.md  cost-modeling.md  d1c-mdp.md  deploy-strategy.md  deployment.md  highlight-features.md  implementation-plan.md  observability.md  roadmap.md  the-plan.md  workers-rs-notes.md
scripts/: build-backend.sh
