[package]
name = "saavy_uptime"
version = "0.1.0"
edition = "2021"
authors = ["SaavyLab LLC <jayson@saavylab.com"]
description = "Saavy Uptime is a Cloudflare-first uptime and incident platform."

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'axum', 'd1'] }
worker-macros = { version = "0.6", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"
serde = "1.0.228"
console_error_panic_hook = "0.1.7"
getrandom = { version = "^0.3.4", features = ["wasm_js"] }
cuid2 = "0.1.4"

