[package]
name = "saavy_uptime"
version = "0.1.0"
edition = "2021"
authors = ["SaavyLab LLC <jayson@saavylab.com"]
description = "Saavy Uptime is a Cloudflare-first uptime and incident platform."

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'axum', 'd1'] }
worker-macros = { version = "0.6", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ["json", "query"] }
tower-service = "0.3.3"
serde = "1.0.228"
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
getrandom = { version = "^0.3.4", features = ["wasm_js"] }
cuid2 = "0.1.4"
jwt = "0.16.0"
tower-http = { version = "0.6.6", features = ["cors"] }
js-sys = "0.3.82"
once_cell = "1.19.0"
base64 = "0.21"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["registry", "std"] }
