[package]
name = "d1c"
version = "0.1.0"
edition = "2021"
description = "Type-safe SQL generator for Cloudflare D1 + Rust"
authors = ["SaavyLab LLC <jayson@saavylab.com>"]
license = "MIT"
homepage = "https://github.com/saavylab/d1c"
repository = "https://github.com/saavylab/d1c"
documentation = "https://github.com/saavylab/d1c"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
console = "0.16.1"
heck = "0.5.0"
inquire = "0.9.1"
notify = "8.2.0"
prettyplease = "0.2.37"
proc-macro2 = "1.0.103"
quote = "1.0.42"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled", "column_decltype", "column_metadata"]}
serde = { version = "1.0", features = ["derive"] }
sqlparser = { version = "0.59.0", features = ["visitor"] }
syn = "2.0.110"
toml = "0.9.8"
walkdir = "2.5.0"
