[package]
name = "hb-auth"
version = "0.1.0"
edition = "2021"

[features]
default = ["axum"]
axum = ["dep:axum"]

[dependencies]
worker = { version = "0.6", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
once_cell = "1.19.0"
js-sys = "0.3"
tracing = "0.1"
