[package]
name = "hb-auth"
version = "0.1.0"
edition = "2021"
authors = ["SaavyLab LLC <jayson@saavylab.com"]
description = "Identity and permissions for Cloudflare Workers."
license = "MIT"
homepage = "https://crates.io/crates/hb-auth"
repository = "https://github.com/saavylab/hb-auth"
documentation = "https://hb.saavylab.dev/docs/hb-auth"
readme = "README.md"

[features]
default = ["axum"]
axum = ["dep:axum"]

[dependencies]
worker = { version = "0.7", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
once_cell = "1.19.0"
js-sys = "0.3"
tracing = "0.1"
