[package]
name = "hb-tracing"
version = "0.1.0"
edition = "2021"
authors = ["SaavyLab LLC <jayson@saavylab.com"]
description = "Distributed tracing for Cloudflare Workers."
license = "MIT"
homepage = "https://crates.io/crates/hb-tracing"
repository = "https://github.com/saavylab/hb-tracing"
documentation = "https://hb.saavylab.dev/docs/hb-tracing"
readme = "README.md"

[dependencies]
worker = { version = "0.6", features = ["queue"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
